--- a/ha-dr/active-site/networks/networks.yaml
+++ b/ha-dr/active-site/networks/networks.yaml
@@ -1,24 +1,24 @@
 ---
 networks:
-  - name: gw-frontend-network-primary
+  - name: !? "'gw-frontend-network-' + $env.SITE_NAME"
     gateway: 172.22.10.1
     netmask: 255.255.255.128
     suffix: 25
     start: 172.22.10.2
     end: 172.22.10.126
-  - name: gw-backend-network-primary
+  - name: !? "'gw-backend-network-' + $env.SITE_NAME"
     gateway: 172.22.10.129
     netmask: 255.255.255.128
     suffix: 25
     start: 172.22.10.130
     end: 172.22.10.254
-  - name: subsys-network-primary
+  - name: !? "'subsys-network-' + $env.SITE_NAME"
     gateway: 192.168.72.1
     netmask: 255.255.255.128
     suffix: 25
     start: 192.168.72.2
     end: 192.168.72.126
-  - name: management-network-primary
+  - name: !? "'management-network-' + $env.SITE_NAME"
     gateway: 10.1.2.1
     netmask: 255.255.255.0
     suffix: 24
